syntax = "proto3";

package feedback_fusion_v1;

import "google/protobuf/timestamp.proto";

message TextResponse { string text = 1; }

message RatingResponse { int32 rating = 1; }

message CheckboxResponse { bool checked = 1; }

message SelectionResponse { repeated string values = 1; }

message RangeResponse {
  int32 start = 1;
  int32 end = 2;
}

message NumberResponse { int32 number = 1; }

message ResponseData {
  oneof data {
    TextResponse text = 1;
    RatingResponse rating = 2;
    CheckboxResponse checkbox = 3;
    SelectionResponse selection = 4;
    RangeResponse range = 5;
    NumberResponse number = 6;
  }
}

message CreateResponsesRequest { 
  map<string, ResponseData> data = 1;
  string prompt = 2;
}

message GetResponsesRequest {
  int32 page_token = 1;
  int32 page_size = 2;
  string prompt = 3;
}

message ProtoFieldResponse {
  string id = 1;
  string response = 2;
  string field = 3;
  ResponseData data = 4; 
}

message FieldResponseList {
  repeated ProtoFieldResponse data = 1;
}

message ResponsePage {
  int32 page_token = 1;
  int32 next_page_token = 2;
  int32 page_size = 3;
  int32 total = 4;

  map<string, FieldResponseList> data = 5;
}

message ProtoPromptResponse {
  string id = 1;
  string prompt = 2;
  google.protobuf.Timestamp created_at = 3;
}

message UserInfoResponse {
  map<string, bool> permissions = 1;
}
